<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme_switch">Темная тема</string>
    <string name="share_app">Поделиться преложением</string>
    <string name="mail_support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>
    <string name="share_button_url" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="dev_email" translatable="false">nim0y33@gmail.com</string>
    <string name="offer_yandex" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_button_description" translatable="false">Share</string>
    <string name="support_button_description" translatable="false">Support</string>
    <string name="termsOfUse_button_description" translatable="false">TermsOfUse</string>
    <string name="back_button_description" translatable="false">Back</string>
    <string name="track_dot" translatable="false">•</string>
    <string name="no_connection_text">Проблемы со связью\n\n Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="search_refresh_button">Обновить</string>
    <string name="nothing_found_case">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="history_clean">Очистить историю</string>
    <string name="shared_pref_id" translatable="false">some_id</string>
    <string name="ap_country">Страна</string>
    <string name="ap_genre">Жанр</string>
    <string name="ap_year">Год</string>
    <string name="ap_album">Альбом</string>
    <string name="ap_duration">Длительность</string>
    <string name="def_time">00:00</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_add">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="track_multiplie">треков</string>
    <string name="track_several">трека</string>
    <string name="track_one">трек</string>
    <string name="description">Описание</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_positive_btn">Завершить</string>
    <string name="dialog_negative_btn">Отмена</string>
    <string name="edit_modify">Редактировать</string>
    <string name="save_modify">Сохранить</string>
    <string name="delete_playlist_dialog">Хотите удалить плейлист?</string>
    <string name="answer_no">Нет</string>
    <string name="answer_yes">ДА</string>
    <string name="on_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_change">Изменить</string>
    <string name="menu_delete">Удалить</string>
    <string name="no_tracks_in_playlist">В плейлист еще не добавлен\n ни один трек</string>

</resources>