<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settingsbackground"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarsettings"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/all_layouts_padding"
        android:layout_marginTop="4dp"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchcompat"
        style="@style/switchstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/origin.settings"
            android:text="@string/share_app" />

        <Button
            android:id="@+id/shareButton"
            style="@style/settingsbuttonstyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="end"
            android:contentDescription="@string/share_button_description"
            app:icon="@drawable/share_gray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/origin.settings"
            android:text="@string/mail_support" />

        <Button
            android:id="@+id/supportButton"
            style="@style/settingsbuttonstyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="end"
            android:contentDescription="@string/support_button_description"
            app:icon="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/origin.settings"
            android:text="@string/user_agree" />

        <Button
            android:id="@+id/termsOfUseButton"
            style="@style/settingsbuttonstyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="end"
            android:contentDescription="@string/termsOfUse_button_description"
            app:icon="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>