<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            app:icon="@drawable/back_arrow"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:text="@string/settings"
            android:textAppearance="@style/main" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchcompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme_switch"
        android:textAppearance="@style/origin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/share_app"
            android:textAppearance="@style/origin" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:contentDescription="@android:string/no"
            app:icon="@drawable/share_gray"
            app:iconGravity="end"
            app:iconTint="@color/yandex_gray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/call_support"
            android:textAppearance="@style/origin" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_w"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:contentDescription="@android:string/no"
            app:icon="@drawable/support"
            app:iconGravity="end"
            app:iconTint="@color/yandex_gray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/user_agree"
            android:textAppearance="@style/origin" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:contentDescription="@android:string/no"
            app:icon="@drawable/arrow_forward"
            app:iconTint="@color/yandex_gray" />
    </FrameLayout>
</LinearLayout>
