<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settingsbackground"
    tools:context=".ui.search.activity.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/all_layouts_padding"
        android:layout_marginTop="4dp"
        app:title="@string/search" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/edit_query"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/search_icon_edit_text"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:saveEnabled="false"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/yandex_gray" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:clickable="true"
            android:contentDescription="@android:string/cancel"
            android:padding="@dimen/mid_padding"
            android:src="@drawable/search_close_ic"
            android:visibility="gone"
            app:iconTint="@color/black" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/nothing_found_case_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_error_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/nothing_found_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/nothing_found_case" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connection_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_error_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/no_connection_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/no_connection_text" />

        <Button
            android:id="@+id/search_refresh_button"
            style="@style/refresh_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin_button_search"
            app:cornerRadius="@dimen/button_refresh_corner_radius" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_button_search"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/track_padding"
            android:text="@string/you_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="8"
            tools:listitem="@layout/view_track"
            tools:visibility="visible" />

        <Button
            android:id="@+id/history_clear_button"
            style="@style/refresh_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/history_clean"
            app:cornerRadius="@dimen/button_refresh_corner_radius" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/view_track"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/background_main"
        tools:progress="75" />

</LinearLayout>